# ChangeLog for app-arch/bsdtar
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.37 2006/10/06 14:04:00 flameeyes Exp $

*bsdtar-1.3.1-r1 (06 Oct 2006)

  06 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-1.3.1-static.patch, +bsdtar-1.3.1-r1.ebuild:
  Make sure that build/static useflags are correctly respected (as this
  package is used in Gentoo/FreeBSD stage1).

  06 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> bsdtar-1.3.1.ebuild:
  Fix dependencies.

  24 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> bsdtar-1.2.53.ebuild,
  bsdtar-1.2.57.ebuild, bsdtar-1.3.1.ebuild:
  Fix the autotools version dependencies.

*bsdtar-1.3.1 (08 Sep 2006)

  08 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  -bsdtar-1.2.53-r1.ebuild, +bsdtar-1.3.1.ebuild:
  Version bump and remove old version.

*bsdtar-1.2.57 (02 Sep 2006)

  02 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-1.2.57-acl.patch, +bsdtar-1.2.57.ebuild:
  Version bump with a new patch.

  31 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  bsdtar-1.2.53-r1.ebuild:
  Use -j1 to actually install.

  30 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> bsdtar-1.2.53.ebuild,
  bsdtar-1.2.53-r1.ebuild:
  Die when the install failed.

*bsdtar-1.2.53-r1 (18 Jun 2006)

  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libarchive-1.2.53-strict-aliasing.patch, +bsdtar-1.2.53-r1.ebuild:
  Add patch to fix strict-aliasing.

  09 Jun 2006; Emanuele Giaquinta <exg@gentoo.org> bsdtar-1.2.53.ebuild:
  Simplify test for static, no need to special case darwin.

  14 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/bsdtar-1.02.027-osx.patch, -bsdtar-1.02.027-r1.ebuild,
  -bsdtar-1.2.52.ebuild:
  Drop old versions.

  14 May 2006; Luis Medinas <metalgod@gentoo.org> bsdtar-1.2.53.ebuild:
  Stable on amd64. Bug #132604.

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> bsdtar-1.2.53.ebuild: