@@ -11,19 +11,18 @@ MD5 6590bb296f0bb64ecfcd6b779cae3890 files/libarchive-1.3.1-static.patch 1333
 RMD160 21488116b37c75506061f6f5873f91670a3fe45a files/libarchive-1.3.1-static.patch 1333
 SHA256 40be241edf721d5601824286e9221955add582d9136f3fc7e29f9abcb192a78c files/libarchive-1.3.1-static.patch 1333
 DIST libarchive-1.3.1.tar.gz 901173 RMD160 e518f802d9a50afcfede6dd7cbb4f42b2cbe12a1 SHA1 aed6eda15b012adbb88af0f0d76887920ffe7bbf SHA256 ad9eaf5779df75b9a0618a732eb227792e65db17c6713fe81ef5bff2bbc616a8
-EBUILD bsdtar-1.3.1-r1.ebuild 1903 RMD160 1f75eb4d4969e2d9d2ebe5090b53e2032cd2b801 SHA1 b98892a9842470cdae1b958aef02f597faf079df SHA256 0cc16fb7489ba37ac64c85c35ef38cc648278a2c51b8b1dbb75e41314849c48c
-MD5 badc67c63959a9fe262882fd57270889 bsdtar-1.3.1-r1.ebuild 1903
-RMD160 1f75eb4d4969e2d9d2ebe5090b53e2032cd2b801 bsdtar-1.3.1-r1.ebuild 1903
-SHA256 0cc16fb7489ba37ac64c85c35ef38cc648278a2c51b8b1dbb75e41314849c48c bsdtar-1.3.1-r1.ebuild 1903
-MISC ChangeLog 6592 RMD160 3642e74e6baa02363edb4a3f8b357a9515fe0036 SHA1 e9f5c4498af303778d6b545043e399f981890feb SHA256 5e7d5650f65c4d237d0b7b40f07ca00c42c593c50b52e01376198aecea89a22b
-MD5 e8349e2e49cae4e6ce213e926a4ad5e5 ChangeLog 6592
-RMD160 3642e74e6baa02363edb4a3f8b357a9515fe0036 ChangeLog 6592
-SHA256 5e7d5650f65c4d237d0b7b40f07ca00c42c593c50b52e01376198aecea89a22b ChangeLog 6592
+EBUILD bsdtar-1.3.1-r1.ebuild 1904 RMD160 5b3f8f522c5b767fd3a9c1daef3654a5203ec8b6 SHA1 4289387c392831a99e3d13ad7c9d78e5564981a6 SHA256 e08bd899cf6a53feeeed5d580df3412a63132d6796ad5f7341310d4c92a6eb36
+MD5 079be8e0a77b73a03c0528854a1aefa0 bsdtar-1.3.1-r1.ebuild 1904
+RMD160 5b3f8f522c5b767fd3a9c1daef3654a5203ec8b6 bsdtar-1.3.1-r1.ebuild 1904
+SHA256 e08bd899cf6a53feeeed5d580df3412a63132d6796ad5f7341310d4c92a6eb36 bsdtar-1.3.1-r1.ebuild 1904
+MISC ChangeLog 6878 RMD160 912e9fa33e6109bd3795261baf254e50c31bca35 SHA1 b20929707a56c5028648cce3aecbebb7e1597924 SHA256 de572890279488eb33e79639ad34ed08fd1ac86d3dab910ece6e7ab92f3e952e
+MD5 b4b7f79471c8d9cd270e9c5ab4e65806 ChangeLog 6878
+RMD160 912e9fa33e6109bd3795261baf254e50c31bca35 ChangeLog 6878
+SHA256 de572890279488eb33e79639ad34ed08fd1ac86d3dab910ece6e7ab92f3e952e ChangeLog 6878
 MISC metadata.xml 428 RMD160 b1ff6b3d84ad489dc4f5ab5f1d9ee9b60266c2ff SHA1 a45d1c0b222b298767f08a2df8d4d84fdecc8434 SHA256 236fee13551e3785be53bd3f70c0784803827edf245c913851f239689e3278f4
 MD5 afec809b169074e5d5b0803e4f8f5ec8 metadata.xml 428
 RMD160 b1ff6b3d84ad489dc4f5ab5f1d9ee9b60266c2ff metadata.xml 428
 SHA256 236fee13551e3785be53bd3f70c0784803827edf245c913851f239689e3278f4 metadata.xml 428
-size 250 files/digest-bsdtar-1.3.1-r1 250
+MD5 46c18ca117e44e7e3f070e41f466f72e files/digest-bsdtar-1.3.1-r1 250
 RMD160 5bacf3a8252a2b227bfe4e6edf52d55c4240f6a4 files/digest-bsdtar-1.3.1-r1 250
 SHA256 bbe48267a685e9836d773f76142f7f7a0bcc3f1a05262ed7fb3fb847a9fefd1e files/digest-bsdtar-1.3.1-r1 250
-MD5 46c18ca117e44e7e3f070e41f466f72e files/digest-bsdtar-1.3.1-r1 250
