@@ -1,6 +1,13 @@
 # ChangeLog for app-arch/bsdtar
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.37 2006/10/06 14:04:00 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.39 2006/10/17 12:01:10 uberlord Exp $
+
+  17 Oct 2006; Roy Marples <uberlord@gentoo.org> bsdtar-1.3.1-r1.ebuild:
+  Added ~sparc-fbsd keyword.
+
+  08 Oct 2006; Fabian Groffen <grobian@gentoo.org> bsdtar-1.2.53.ebuild,
+  bsdtar-1.2.57.ebuild, bsdtar-1.3.1.ebuild, bsdtar-1.3.1-r1.ebuild:
+  Dropped ~ppc-macos, see you in prefix.
 
 *bsdtar-1.3.1-r1 (06 Oct 2006)
 
